--- a/topics/tmux/tmux.osx.conf
+++ b/topics/tmux/tmux.osx.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l fish"
 
 set -g default-terminal "screen-256color"
 set -g history-limit 100000
