--- a/topics/tmux/tmux.osx.conf
+++ b/topics/tmux/tmux.osx.conf
@@ -64,6 +64,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind l select-pane -R
+bind -n C-h run "tmux send-keys C-h && (tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+unbind -n C-h
+
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
