--- a/topics/tmux/tmux.osx.conf
+++ b/topics/tmux/tmux.osx.conf
@@ -7,6 +7,8 @@ set -g history-limit 100000
 set-window-option -g mode-keys vi
 unbind p
 bind p paste-buffer
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
 
 # Use ctrl-t instead of ctrl-b
 unbind C-b
@@ -41,6 +43,9 @@ unbind +
 bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
+
+# Set mouse mode on
+set -g mouse on
 
 # Tab titles
 
