--- a/topics/tmux/tmux.osx.conf
+++ b/topics/tmux/tmux.osx.conf
@@ -100,4 +100,5 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
-set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
+set-window-option -g automatic-rename on
+# set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
