--- a/topics/osx/Brewfile
+++ b/topics/osx/Brewfile
@@ -8,6 +8,7 @@ tap "homebrew/php"
 tap "homebrew/science"
 tap "homebrew/services"
 tap "homebrew/versions"
+cask "java"
 brew "ack"
 brew "libyaml"
 brew "ansible"
