Modify tmux configs

--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -42,10 +42,7 @@ bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mouse-resize-pane on
-set -g mode-mouse on
+set -g mouse on
 
 # Tab titles
 
@@ -95,7 +92,6 @@ set -g message-attr bold
 
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
