Fix C-t in tmux.conf

--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -68,7 +68,7 @@ unbind -n C-h
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
-bind-key C-t last-window
+bind-key C-t send-prefix
 
 # Better name management
 bind c new-window \; command-prompt "rename-window '%%'"
