--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -71,6 +71,11 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key C-t send-prefix
 
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
 # Better name management
 bind c new-window \; command-prompt "rename-window '%%'"
 bind C new-window
