--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -6,8 +6,8 @@ set-window-option -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
-bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi 'Y' send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Use ctrl-t instead of ctrl-b
 unbind C-b
