--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -1,3 +1,5 @@
+# mkdir -p ~/.tmux/plugins
+# git clone https://github.com/tmux-plugins/tpm.git ~/.tmux/plugins/tpm
 set -g default-terminal "screen-256color-bce"
 set -g history-limit 100000
 
