--- a/topics/tmux/tmux.linux.conf
+++ b/topics/tmux/tmux.linux.conf
@@ -9,7 +9,7 @@ unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
-bind-key -T copy-mode-vi 'Y' send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'Y' send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
 # Use ctrl-t instead of ctrl-b
 unbind C-b
