--- a/topics/tmux/tmux.osx.conf
+++ b/topics/tmux/tmux.osx.conf
@@ -1,14 +1,15 @@
-set-option -g default-command "reattach-to-user-namespace -l fish"
-
-set -g default-terminal "screen-256color"
-set -g history-limit 10000
+# mkdir -p ~/.tmux/plugins
+# git clone https://github.com/tmux-plugins/tpm.git ~/.tmux/plugins/tpm
+set -g default-terminal "screen-256color-bce"
+set -g history-limit 100000
 
 # use VI
 set-window-option -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi 'Y' send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Use ctrl-t instead of ctrl-b
 unbind C-b
@@ -44,7 +45,6 @@ bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
-# Set mouse mode on
 set -g mouse on
 
 # Tab titles
@@ -61,18 +61,23 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind l select-pane -R
+bind o last-window
 # bind -n C-h run "tmux send-keys C-h && (tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
 # bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 # bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 # bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 unbind -n C-h
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
-bind-key C-t last-window
+bind-key C-t send-prefix
+
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
 # Better name management
 bind c new-window \; command-prompt "rename-window '%%'"
@@ -84,24 +89,17 @@ bind v split-window -h
 bind s split-window -v
 bind S choose-session
 
-set -g status-fg white
-set -g status-bg colour234
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-#set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
-#set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
-set-option -g status-left ""
-set-option -g status-right ""
-set-window-option -g automatic-rename on
-# set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
-set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]"
+# THeme
+set -g @themepack 'powerline/default/cyan'
+
+# Resurrect
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+run '~/.tmux/plugins/tpm/tpm'
