--- a/topics/tmux/tmux.conf
+++ b/topics/tmux/tmux.conf
@@ -89,6 +89,9 @@ bind v split-window -h
 bind s split-window -v
 bind S choose-session
 
+bind ( switch-client -p
+bind ) switch-client -n
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jimeh/tmux-themepack'
