--- a/topics/starship/starship.toml
+++ b/topics/starship/starship.toml
@@ -50,6 +50,9 @@ home_symbol = " ~"
 read_only_style = "197"
 format = "at [$path]($style)[$read_only]($read_only_style) "
 
+[direnv]
+disabled = false
+
 [git_branch]
 symbol = ""
 format = "via [$symbol$branch]($style) "
